zink/venus: driverID based workarounds should use the underlying driver
For venus, driver based workarounds should depend on the underlying driver.
For now, I'll send an MR to remove venus from renderpass optimizations as I'm seeing crashes on top of anv/radv.
Follow up once there's a way to query the underlying driver.
cc: @zzyiwei
Edited by Juston Li